--- a/static/recommendvideos.css
+++ b/static/recommendvideos.css
@@ -11,14 +11,8 @@ header {
     font-family: fantasy, sans-serif;
 }
 
-.diagosis-contents {
-    padding: 30px;
-    background-color: #beffd7;
-}
-
-.result-contents {
-    padding: 30px;
-    background-color: #ffcfcf;
+.your_recommendation {
+    a
 }
 
 button {
