VideoContentのテーブルカラムを変更

--- a/templates/recommendvideos.html
+++ b/templates/recommendvideos.html
@@ -16,7 +16,7 @@
     </header>
     <div class = "your_recommendation">
     {% for content , path in contents , video_pathes %}
-    {% if content.contents_type == "youtube"}
+    {% if content.contents_type == "youtube"%}
         <div>
             <form action = ""  method = "POST">
 
