--- a/templates/recommendvideos.html
+++ b/templates/recommendvideos.html
@@ -23,7 +23,7 @@
         </div>
     {% elif content.content_type == "local_file" %}
         <div>
-            <video controls preload = "auto" playsinline src = {{path}}>
+            <video controls preload = "auto" playsinline src = {%%}></video>
         </div>
     {% endif %}
     {% endfor %}
