--- a/templates/diagnosis.html
+++ b/templates/diagnosis.html
@@ -1,58 +1,39 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta cherset="UTF-8">
-    <link rel="stylesheet" herf="../static/top.css">
-</head>
-<body>
-    <legend>興味のある分野を3つ選択</legend> 
-    <!--20個の中から3個までを選択する、name指定以外でバックに
-    もっていかなければならない-->
-    <input type="checkbox" name="tag">choice1
-    <input type="checkbox" name="tag">choice2
-    <input type="checkbox" name="tag">choice3
-    <input type="checkbox" name="tag">choice4
-    <input type="checkbox" name="tag">choice5
-    <input type="checkbox" name="tag">choice6
-    <input type="checkbox" name="tag">choice7
-    <input type="checkbox" name="tag">choice8
-    <input type="checkbox" name="tag">choice9
-    <input type="checkbox" name="tag">choice10
-    <input type="checkbox" name="tag">choice11
-    <input type="checkbox" name="tag">choice12
-    <input type="checkbox" name="tag">choice13
-    <input type="checkbox" name="tag">choice14
-    <input type="checkbox" name="tag">choice15
-    <input type="checkbox" name="tag">choice16
-    <input type="checkbox" name="tag">choice17
-    <input type="checkbox" name="tag">choice18
-    <input type="checkbox" name="tag">choice19
-    <input type="checkbox" name="tag">choice20
-
-<script>
-    const checkMax = 3;
-    const checkBoxes = document.getElementsByName('tag');
-
-    function checkCount(target) {
-        let checkCount = 0;
-        checkBoxes.forEach(checkBox => {
-            if (checkBoxes.checked) {
-                checkCount++;
-            }
-        });
-    
-        if (checkCount > checkMax) {
-            alert('最大3つまで');
-            target.checked = false;
-        }
-    }
-
-    checkBoxes.forEach(checkBox => {
-        checkBox.addEventListener('change' , () => {
-            checkCount(checkBox);
+  <head>
+    <meta cherset="UTF-8" />
+    <link rel="stylesheet" herf="../static/top.css" />
+  </head>
+  <body>
+    <legend>興味のある分野を3つ選択</legend>
+    <!--   20個の中から3個までを選択する、name指定以外でバックに
+    もっていかなければならない   -->
+    {% for tag in tags %}
+      <input type="checkbox" name="tag{{ tag.pk }}" class="tag" />{{ tag.name }}
+    {% endfor %}
+    <script>
+      const checkMax = 3
+      const checkBoxes = document.getElementsByClassName('tag') // nameで取得するのではなく、class名で要素を取得するようにした.
+      
+      function checkCount(target) {
+        let checkCount = 0
+        checkBoxes.forEach((checkBox) => {
+          if (checkBoxes.checked) {
+            checkCount++
+          }
         })
-    });
-</script>
-
-</body>
+      
+        if (checkCount > checkMax) {
+          alert('最大3つまで')
+          target.checked = false
+        }
+      }
+      
+      checkBoxes.forEach((checkBox) => {
+        checkBox.addEventListener('change', () => {
+          checkCount(checkBox)
+        })
+      })
+    </script>
+  </body>
 </html>
