--- a/templates/recommend_videos.html
+++ b/templates/recommend_videos.html
@@ -1,32 +1,28 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta cherset="UTF-8">
-    <link rel="stylesheet" herf="../static/top.css">
-</head>
-<body>
+{% extends 'base.html' %}
+
+
+
     <header>
-        <p>DreamDirector</p>
-        <form method = "POST" action = "">
-            <button type = "submit" , name = "return_home">トップページ</button>
-        </form>
-        <form method = "POST" action = "">
-            <button type = "submit" , name = "post_page">投稿</button>
-        </form>
+      <p>DreamDirector</p>
+      {% comment %} <a href="{% url 'top' %}" name="return_home">トップページ</a> {% endcomment %}
+      {% comment %} <a href="{% url 'post' %}">投稿</a> {% endcomment %}
     </header>
-    <div class = "your_recommendation">
-    {% for content , path in contents , video_pathes %}
-    {% if content.contents_type == "youtube"%}
-        <div>
-            <form action = ""  method = "POST">
-            <iframe width="560" height="315" src= {{path}} title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-        </div>
-    {% elif content.content_type == "local_file" %}
-        <div>
-            <video controls preload = "auto" playsinline src = {%%}></video>
-        </div>
-    {% endif %}
-    {% endfor %}
-    </div>
-</body>
+    <main>
+      <div class="your_recommendation">
+        {% for video in videos %}
+          {% if video.is_url_link %}
+            <div>
+              <form action="" method="POST">
+                <iframe width="560" height="315" src="{{ video.url }}" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+              </form>
+            </div>
+          {% else %}
+            <div>
+              <video controls preload="auto" playsinline src="{{ video.video.path }}"></video>
+            </div>
+          {% endif %}
+        {% endfor %}
+      </div>
+    </main>
+  </body>
 </html>
