--- a/templates/base.html
+++ b/templates/base.html
@@ -6,16 +6,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     {% block title %}
-      <!-- titleタグを入れるblock -->
+
     {% endblock %}
     {% block extraMetaInfo %}
-      <!-- 追加のlinkタグなどを入れるblock -->
+
     {% endblock %}
   </head>
   <body>
     <header>
-      {% comment %} <a href="{% url 'top' %}" name="return_home">トップページ</a> {% endcomment %}
-      {% comment %} <a href="{% url 'post' %}">投稿</a> {% endcomment %}
+      <!-- トップページなどが使えるようになったらコメントを外すこと -->
+      <a href="{% url 'recommend_videos' %}" name="return_home">トップページ</a>
+      <a href="{% url 'post' %}">投稿</a>
       {% block extraheader %}
 
       {% endblock %}
@@ -31,4 +32,7 @@
       {% endblock %}
     </footer>
   </body>
+  {% block extraScript %}
+
+  {% endblock %}
 </html>
