--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,7 @@
     <header>
       <!-- トップページなどが使えるようになったらコメントを外すこと -->
       <a href="{% url 'recommend_videos' %}" name="return_home">トップページ</a>
-      <a href="{% url 'post' %}">投稿</a>
+      <a href="{% url 'post_video' %}">投稿</a>
       {% block extraheader %}
 
       {% endblock %}
