--- a/templates/video.html
+++ b/templates/video.html
@@ -5,6 +5,13 @@
     <link rel="stylesheet" herf="../static/top.css">
 </head>
 <body>
-    
+    <h2>{{ name }}</h2>
+    <video width="640" height="360" controls>
+        <source src="{{ video }}" type="video/mp4">
+        Your browser does not support the video tag.
+        <ol>
+            <li>{% for tag in tags %}</li>
+        </ol>
+    </video>
 </body>
 </html>
