動画を表示できるようにした

--- a/templates/video_app/recommend_videos.html
+++ b/templates/video_app/recommend_videos.html
@@ -28,7 +28,7 @@
         </div>
       {% else %}
         <div>
-          <video controls preload="auto" playsinline src="{{ video.video.path }}"></video>
+          <video controls preload="auto" playsinline src="/static/media/{{ video.filename }}"></video>
         </div>
       {% endif %}
     {% endfor %}
