松山mp4ファイル関係を変更とbase.htmlを変更

--- a/templates/video_app/recommend_videos.html
+++ b/templates/video_app/recommend_videos.html
@@ -24,11 +24,12 @@
         <div>
           <form action="" method="POST">
             <iframe width="560" height="315" src="{{ video.url }}" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/-bQUP7jfUGg?si=P_x-7qC2y477XFvz" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
           </form>
         </div>
       {% else %}
         <div>
-          <video controls preload="auto" playsinline src="{{ video.video.path }}"></video>
+          <video controls preload="auto" playsinline src="{% static '{{ videos.video.path }}' %}"></video>
         </div>
       {% endif %}
     {% endfor %}
