--- a/templates/video.html
+++ b/templates/video.html
@@ -7,8 +7,7 @@
 <body>
     <h2>{{ name }}</h2>
     <video width="640" height="360" controls>
-        <source src="{{ video }}" type="video/mp4">
-        Your browser does not support the video tag.
+        <video src="" controls></video>
         <ol>
             <li>{% for tag in tags %}</li>
         </ol>
