--- a/templates/video_app/post_video.html
+++ b/templates/video_app/post_video.html
@@ -4,6 +4,12 @@
 
 {% block title %}
   <!-- titleタグを入れる -->
+  <form  action="" method="POST">{% csrf_token %}
+  <table>
+    {{  }}
+  </table>
+  <input type="submit" value="投稿">
+</form>
 {% endblock %}
 
 {% block extraMetaInfo %}
