--- a/templates/video_app/other_videos.html
+++ b/templates/video_app/other_videos.html
@@ -9,7 +9,7 @@
 
 {% block extraMetaInfo %}
   <!-- 追加のlinkタグなどを入れる -->
-  <link rel="stylesheet" href="{% static '/css/other_videos.css' %}" />
+  <link rel="stylesheet" href="{% static '/css/recommend_videos.css' %}" />
 {% endblock %}
 
 {% block extraheader %}
