--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="{% static 'css/diagnosis.css' %}">
+    <link rel="stylesheet" href="{% static '/css/diagnosis.css' %}" />
     {% block title %}
 
     {% endblock %}
@@ -16,14 +16,13 @@
   <body>
     <header>
       <a href="{% url 'recommend_videos' %}" name="return_home">トップページ</a>
-      <a href="{% url 'post_video' %}">投稿</a>
+      {% comment %} <a href="{% url 'post_video' %}">投稿</a> {% endcomment %}
       {% if request.user.is_authenticated %}
-          <a href="{% url 'account_app:logout' %}">ログアウト</a>
-        {% else %}
-          <a href="{% url 'account_app:login' %}">ログイン</a>
-          <a href="{% url 'account_app:signup' %}">会員登録</a>
-        {% endif %}
-
+        <a href="{% url 'account_app:logout' %}">ログアウト</a>
+      {% else %}
+        <a href="{% url 'account_app:login' %}">ログイン</a>
+        <a href="{% url 'account_app:signup' %}">会員登録</a>
+      {% endif %}
 
       {% block extraheader %}
 
