--- a/templates/video_app/recommend_videos.html
+++ b/templates/video_app/recommend_videos.html
@@ -24,17 +24,17 @@
         <div>
           <form action="" method="POST">
             <iframe width="560" height="315" src="{{ video.url }}" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-            <form action="" mathod="POST">
-            <button type ="submit" name="video">動画を表示</button>
-            </form>
+            {% comment %} <form action="" mathod="POST"> {% endcomment %}
+            {% comment %} <button type ="submit" name="video">動画を表示</button> {% endcomment %}
+            {% comment %} </form> {% endcomment %}
           </form>
         </div>
       {% else %}
         <div>
           <video controls preload="auto" playsinline src="{% static '{{ videos.video.path }}' %}"></video>
-          <form action="" method="POST">
-          <button type ="submit" name="video">動画を表示</button>
-          </form>
+          {% comment %} <form action="" method="POST"> {% endcomment %}
+          {% comment %} <button type ="submit" name="video">動画を表示</button> {% endcomment %}
+          {% comment %} </form> {% endcomment %}
         </div>
         <a href="{% url 'video' video.id %}">その動画へ</a>
       {% endif %}
